--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
       with:
         node-version: '24'
     - run: npm install # 依存関係のインストール
-    - run: npm run build # Angularアプリのビルド
+    - run: npm run build -- --base-href=/ghpages-demo/ # Angularアプリのビルド
     - uses: actions/upload-pages-artifact@v3 # ビルド成果物のアップロード
       with:
         path: ./dist/ghpages-demo/browser
